fix(about-frontend): fixed image box stretching in preview container resulting in white space.

--- a/client/src/style/about.css
+++ b/client/src/style/about.css
@@ -312,6 +312,7 @@ button {
   border-radius: 12px;
   overflow: hidden;
   background: #f2f2f2;
+  align-self: start;
 }
 
 .exec-preview-image {
